fixed collapse toggle

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ a{
 
     .collapse-toggle{
         max-height: 900px;
-        width:125px;
+        width: 170px;
 
        
 
